--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>  
 
-    <div class="container-fluid" style="background: rgb(28,25,27);
+    <div id="Gamer" class="container-fluid" style="background: rgb(28,25,27);
     background-color:black; height:min-content;padding-right: 0%;">
       <div class="row">
         <div class="col-sm-6" style="color: white; text-align: center;">
@@ -109,7 +109,7 @@
       </div>
     </div>  
     
-    <div class="container-fluid" style="background: rgb(28,25,27);
+    <div id="Casque" class="container-fluid" style="background: rgb(28,25,27);
     background: radial-gradient(circle, rgba(28,25,27,1) 0%, rgba(74,74,73,1) 100%); height:min-content;padding-left: 0%;">
       <div class="row">
         <div class="col-sm-6">
@@ -284,10 +284,6 @@
   </div>
 </div>
 </div>  
-<!-- BTN SCROLL TOP -->
-<button type="button" class="btn btn-dark btn-floating btn-lg" id="btn-back-to-top">
-  <i class="fas fa-arrow-up"></i>
-</button>
 </section>
 <footer class="bg-dark text-center text-white">
   <div class="container p-4 pb-0">
@@ -318,6 +314,10 @@
     <a class="text-white" href="#">DynaFuel.com</a>
   </div>
 </footer>
+<!-- BTN SCROLL TOP -->
+<!-- <button type="button" class="btn btn-dark btn-floating btn-lg" id="btn-back-to-top">
+  <i class="fas fa-arrow-up"></i>
+</button> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="JavaScript/Script.js"></script>
