--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
 </div>
 <!-- COMPTE A REBOUR -->
 <div class="timer-bloc container-fluid">
-<h2 class="brand">TOP SECRET</h2>
-<h1 class="title">Coming Soon</h1>
-<h1 class="timer">00:00:00</h1>
+  <h2 class="brand">TOP SECRET</h2>
+  <h1 class="title">Coming Soon</h1>
+  <h1 class="timer"></h1>
 </div>
 <!-- CARD PERSON -->
 <div id="div-person" class="div-product bg-dark tex">
@@ -315,10 +315,11 @@
   </div>
 </footer>
 <!-- BTN SCROLL TOP -->
-<!-- <button type="button" class="btn btn-dark btn-floating btn-lg" id="btn-back-to-top">
+<button type="button" class="btn btn-dark btn-floating btn-lg" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
-</button> -->
+</button>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="JavaScript/Script.js"></script>
+<script src="JavaScript/Script2.js"></script>
 </html>
