--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           </li>
         </ul>
         <div class="nav-item">
-          <a class="nav-link mx-2 nav-insta" href="https://www.instagram.com/dyna.fuel"><i class="fa-brands fa-instagram"></i></a>
-          <a class="nav-link mx-2 nav-insta" href="https://www.facebook.com/profile.php?id=61553031967685"><i class="fab fa-facebook-square"></i></a>
+          <a class="nav-link mx-2 nav-insta" target="_blank" href="https://www.instagram.com/dyna.fuel"><i class="fa-brands fa-instagram"></i></a>
+          <a class="nav-link mx-2 nav-insta" target="_blank" href="https://www.facebook.com/profile.php?id=61553031967685"><i class="fab fa-facebook-square"></i></a>
         </div>
       </div>
     </div>
