add btn commander

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2" href="https://www.instagram.com/dyna.fuel">Médias</a>
+            <a class="nav-link mx-2" target="_blank" href="https://www.instagram.com/dyna.fuel">Médias</a>
           </li>
         </ul>
         <div class="nav-item">
@@ -232,6 +232,10 @@
           <input data-image="green" type="radio" id="green" name="color" value="green">
           <label for="green"><span></span></label>
         </div>
+      </div>
+
+      <div>
+        <button id="btn-commander" type="button"><i class="fas fa-shopping-cart"></i> COMMANDER</button>
       </div>
     </div>
   </div>
