--- a/index.html
+++ b/index.html
@@ -295,23 +295,54 @@
     <div>
       <form>
         <div class="row d-flex justify-content-center">
-          <div class="col-auto">
-            <p class="pt-2">
-              <strong>Sign up for our newsletter</strong>
-            </p>
-          </div>
           <div class="col-md-5 col-12">
+            <p class="pt-2 text-center">
+              <strong>La Newsletter DynaFuel</strong>
+            </p>
+            <div class="row">
+              <div class="col-md-6 col-12 mb-4">
+                <div class="form-outline form-white">
+                  <input placeholder="Nom" type="text" id="form5Example1" class="form-control" />
+                </div>
+              </div>
+              <div class="col-md-6 col-12 mb-4">
+                <div class="form-outline form-white">
+                  <input placeholder="Prénom" type="text" id="form5Example1" class="form-control" />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-12 mb-4">
+                <div class="form-outline form-white">
+                  <input type="date" id="form5Example1" class="form-control" placeholder="Date de naissance"/>
+                </div>
+              </div>
+              <div class="col-md-6 col-12 mb-4">
+                <div class="form-outline form-white">
+                  <select class="form-select" id="form5Example2">
+                    <option value="" disabled selected>Sélectionnez le sexe</option>
+                    <option value="male">Homme</option>
+                    <option value="female">Femme</option>
+                    <option value="female">Je ne sais pas, je suis perdu(e). On m'appelle 'iel'.</option>
+                    <option value="female">5 cm</option>
+                    <option value="female">25 cm</option>
+                  </select>
+                </div>
+              </div>
+            </div>
             <div class="form-outline form-white mb-4">
-              <input placeholder="Email Adress" type="email" id="form5Example2" class="form-control" />
+              <input placeholder="E-mail" type="email" id="form5Example2" class="form-control" />
             </div>
           </div>
+        </div>
+        <div class="row d-flex justify-content-center">
           <div class="col-auto">
             <button type="submit" class="btn btn-outline-light mb-4">
-              Subscribe
+              S'inscrire
             </button>
           </div>
         </div>
-      </form>
+      </form>            
     </div>
   </div>
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
