--- a/index.html
+++ b/index.html
@@ -323,15 +323,20 @@
                     <option value="" disabled selected>Sélectionnez le sexe</option>
                     <option value="male">Homme</option>
                     <option value="female">Femme</option>
-                    <option value="female">Je ne sais pas, je suis perdu(e). On m'appelle 'iel'.</option>
-                    <option value="female">5 cm</option>
-                    <option value="female">25 cm</option>
+                    <option value="nonbinary">Je ne sais pas, je suis perdu(e). On m'appelle 'iel'.</option>
+                    <option value="other">Autre</option>
                   </select>
                 </div>
               </div>
             </div>
             <div class="form-outline form-white mb-4">
               <input placeholder="E-mail" type="email" id="form5Example2" class="form-control" />
+            </div>
+            <div class="form-check mb-4">
+              <input class="form-check-input" type="checkbox" id="conditionsCheck" style="float: none;"/>
+              <label class="form-check-label" for="conditionsCheck">
+                J'accepte les conditions de la newsletter
+              </label>
             </div>
           </div>
         </div>
@@ -342,7 +347,7 @@
             </button>
           </div>
         </div>
-      </form>            
+      </form>                  
     </div>
   </div>
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
