--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <div class="row">
               <div class="col-md-6 col-12 mb-4">
                 <div class="form-outline form-white">
-                  <input type="date" id="form5Example1" class="form-control" placeholder="Date de naissance"/>
+                  <input type="date" id="form5Example1" class="form-control" placeholder="Date de naissance" oninput="checkDatePlaceholder(this)"/>
                 </div>
               </div>
               <div class="col-md-6 col-12 mb-4">
