--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
     </div>
     <div></div>
     <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:transparent; max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://0ddd5e42.sibforms.com/serve/MUIFAJ5_eSKPD0j3a0lrwr7c_vwYTuErTld1Ik1IAaDDggP2vcvIsnRAD2pFFRP16uXQOwscJtlyi_Pjmx8GIsuFGIYc0lDzZqqwnq_ouIs-SzRlY1NNgxT9AhWdKIYO7pU2rEUIId7QDicYlhMi7M6vejaQnWkBiGiAudVPfRaKiy-njH-n2gkdmTe6nnn8IrcpIfhyJ1ddvWQf" data-type="subscription">
+      <form id="sib-form" method="POST" action="https://0ddd5e42.sibforms.com/serve/MUIFAAMXWNmrYdzWmpvGe0K9uqGqdyZWhK2xnWT8OpASYsbp7PmUAcoxOFdfCe4PsLpQa_cMJSFZqipuG5clRkVCI9xAyIhORAbl9fbP8wi51pi_pCgJJX3KyTfwcHVbN1qcZHoSUJaNoNL0nESiFz5nLU7DKNTXEuZuQWCk-Q3QecoJTpKvuwJO7oGbRXlduk_8qMtb4lzioem4" data-type="subscription">
         <div style="padding: 8px 0;">
-          <div class="sib-form-block" style="font-size:32px; text-align:center; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#f9f9fa; background-color:transparent; text-align:center">
-            <p><strong>La Newsletter DynaFuel</strong></p>
+          <div class="sib-form-block" style="font-size:36px; text-align:center; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#f9f9fa; background-color:transparent; text-align:center">
+            <p><strong>Se tenir au courant des actualitées DynaFuel</strong></p>
           </div>
         </div>
         <div style="padding: 8px 0;">
@@ -451,7 +451,7 @@
         </div>
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="text-align: center">
-            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:3px; border-width:0px;" form="sib-form" type="submit">
+            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:20px; text-align:center; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:3px; border-width:0px;" form="sib-form" type="submit">
               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
                 <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z" />
               </svg>
