--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
     </div>
     <div></div>
     <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:transparent; max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://0ddd5e42.sibforms.com/serve/MUIFAAMXWNmrYdzWmpvGe0K9uqGqdyZWhK2xnWT8OpASYsbp7PmUAcoxOFdfCe4PsLpQa_cMJSFZqipuG5clRkVCI9xAyIhORAbl9fbP8wi51pi_pCgJJX3KyTfwcHVbN1qcZHoSUJaNoNL0nESiFz5nLU7DKNTXEuZuQWCk-Q3QecoJTpKvuwJO7oGbRXlduk_8qMtb4lzioem4" data-type="subscription">
+      <form id="sib-form" method="POST" action="https://0ddd5e42.sibforms.com/serve/MUIFADuTSqUw1QQBpH_Ppu7Caiu5M53_kR47J6Ih4R-qoQrZT1WpKQu3PBk8YBNzk0SSw09NiNY_8I8zgFPqvPrwK3sezdaabxdBLqvdQKQcPHEobu9n3E4SvyLX1dXXo8i6SfIZTzrxxxXPQSKf6EwJJL06ydtLDWq-pcDJTC7QHb-R3VR-Ry_tygrB0yoeohygNflw3g8Vl-Mx" data-type="subscription">
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:36px; text-align:center; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#f9f9fa; background-color:transparent; text-align:center">
-            <p><strong>Se tenir au courant des actualitées DynaFuel</strong></p>
+            <p><strong>Se tenir au courant des actualités DynaFuel</strong></p>
           </div>
         </div>
         <div style="padding: 8px 0;">
