--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
 
       <div class="color-choose">
         <div>
-          <input data-image="purple" type="radio" id="purple" name="color" value="purple">
+          <input data-image="purple" type="radio" id="purple" name="color" value="purple" checked>
           <label for="purple"><span></span></label>
         </div>
         <div>
-          <input data-image="red" type="radio" id="red" name="color" value="red" checked>
+          <input data-image="red" type="radio" id="red" name="color" value="red">
           <label for="red"><span></span></label>
         </div>
         <div>
