--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:18px; text-align:center; font-family:&quot;Helvetica&quot;, sans-serif; color:#ffffff; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p>Bénéficier de 10% en vous inscrivant à la newsletter</p>
+              <p>Vous bénéficiez de 10% en vous inscrivant à la newsletter</p>
             </div>
           </div>
         </div>
