--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <h1>Saveur Myrtille</h1>
         <p>Plongez au cœur d'une explosion de saveurs exquises avec l'Élixir Dynafuel Saveur Myrtille.</p>
         <p>Cette boisson énergisante premium incarne l'essence même de la délectation, offrant à vos papilles une expérience gustative exceptionnelle.</p>
-        <p>Boisson White Series, exclusivement disponible !!!</p>
+        <p class="gras"><strong>Boisson White Series, exclusivement disponible !!!</strong></p>
         <span>DynaFuel<span>&#174;</span> c'est ...</span>
         <ul>
           <li><p>Un produit entièrement conçu en Belgique.</p></li>
