--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="carouselExampleAutoplaying" class="carousel slide first" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/fond test diapo site.jpg" class="d-block w-100" alt="Fond1">
+          <a href="#product_id"><img src="images/frozenslide.png" class="d-block w-100" alt="Fond1"></a>
         </div>
         <div class="carousel-item">
           <a href="#Campaign1"><img src="images/fond diapo 2.jpg" class="d-block w-100" alt="Fond2"></a>
